[gd_scene load_steps=9 format=2]

[ext_resource path="res://game_screen/entities/enemy_spawner.tscn" type="PackedScene" id=1]
[ext_resource path="res://game_screen/entities/player_core.tscn" type="PackedScene" id=2]
[ext_resource path="res://game_screen/levels/level.gd" type="Script" id=3]
[ext_resource path="res://game_screen/entities/player_core.gd" type="Script" id=5]
[ext_resource path="res://game_screen/entities/player_tower.tscn" type="PackedScene" id=6]
[ext_resource path="res://game_screen/levels/tiles/walls.tres" type="TileSet" id=7]
[ext_resource path="res://game_screen/levels/tile_map.gd" type="Script" id=8]
[ext_resource path="res://game_screen/levels/tiles/floors.tres" type="TileSet" id=9]

[node name="Level0" type="Node2D"]
script = ExtResource( 3 )

[node name="Floor" type="TileMap" parent="."]
tile_set = ExtResource( 9 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( -524290, 0, 0, -524289, 0, 0, -589824, 0, 0, -589823, 0, 0, -589822, 0, 0, -589821, 0, 0, -589820, 0, 0, -589819, 0, 0, -589818, 0, 0, -589817, 0, 0, -589816, 0, 0, -589815, 0, 0, -589814, 0, 0, -589813, 0, 0, -589812, 0, 0, -589811, 0, 0, -589810, 0, 0, -589809, 0, 0, -589808, 0, 0, -458757, 0, 0, -458756, 0, 0, -458755, 0, 0, -458754, 0, 0, -458753, 0, 0, -524288, 0, 0, -524287, 0, 0, -524286, 0, 0, -524285, 0, 0, -524284, 0, 0, -524283, 0, 0, -524282, 0, 0, -524281, 0, 0, -524280, 0, 0, -524279, 0, 0, -524278, 0, 0, -524277, 0, 0, -524276, 0, 0, -524275, 0, 0, -524274, 0, 0, -524273, 0, 0, -524272, 0, 0, -393221, 0, 0, -393220, 0, 0, -393219, 0, 0, -393218, 0, 0, -393217, 0, 0, -458752, 0, 0, -458751, 0, 0, -458750, 0, 0, -458749, 0, 0, -458748, 0, 0, -458747, 0, 0, -458746, 0, 0, -458745, 0, 0, -458744, 0, 0, -458743, 0, 0, -458742, 0, 0, -458741, 0, 0, -458740, 0, 0, -458739, 0, 0, -458738, 0, 0, -458737, 0, 0, -458736, 0, 0, -327685, 0, 0, -327684, 0, 0, -327683, 0, 0, -327682, 0, 0, -327681, 0, 0, -393216, 0, 0, -393215, 0, 0, -393214, 0, 0, -393213, 0, 0, -393212, 0, 0, -393211, 0, 0, -393210, 0, 0, -393209, 0, 0, -393208, 0, 0, -393207, 0, 0, -393206, 0, 0, -393205, 0, 0, -393204, 0, 0, -393203, 0, 0, -393202, 0, 0, -393201, 0, 0, -393200, 0, 0, -262149, 0, 0, -262148, 0, 0, -262147, 0, 0, -262146, 0, 0, -262145, 0, 0, -327680, 0, 0, -327679, 0, 0, -327678, 0, 0, -327677, 0, 0, -327676, 0, 0, -327675, 0, 0, -327674, 0, 0, -327673, 0, 0, -327672, 0, 0, -327671, 0, 0, -327670, 0, 0, -327669, 0, 0, -327668, 0, 0, -327667, 0, 0, -327666, 0, 0, -327665, 0, 0, -327664, 0, 0, -196613, 0, 0, -196612, 0, 0, -196611, 0, 0, -196610, 0, 0, -196609, 0, 0, -262144, 0, 0, -262143, 0, 0, -262142, 0, 0, -262141, 0, 0, -262140, 0, 0, -262139, 0, 0, -262138, 0, 0, -262137, 0, 0, -262136, 0, 0, -262135, 0, 0, -262134, 0, 0, -262133, 0, 0, -262132, 0, 0, -262131, 0, 0, -262130, 0, 0, -262129, 0, 0, -262128, 0, 0, -131077, 0, 0, -131076, 0, 0, -131075, 0, 0, -131074, 0, 0, -131073, 0, 0, -196608, 0, 0, -196607, 0, 0, -196606, 0, 0, -196605, 0, 0, -196604, 0, 0, -196603, 0, 0, -196602, 0, 0, -196601, 0, 0, -196600, 0, 0, -196599, 0, 0, -196598, 0, 0, -196597, 0, 0, -196596, 0, 0, -196595, 0, 0, -196594, 0, 0, -196593, 0, 0, -196592, 0, 0, -65541, 0, 0, -65540, 0, 0, -65539, 0, 0, -65538, 0, 0, -65537, 0, 0, -131072, 0, 0, -131071, 0, 0, -131070, 0, 0, -131069, 0, 0, -131068, 0, 0, -131067, 0, 0, -131066, 0, 0, -131065, 0, 0, -131064, 0, 0, -131063, 0, 0, -131062, 0, 0, -131061, 0, 0, -131060, 0, 0, -131059, 0, 0, -131058, 0, 0, -131057, 0, 0, -131056, 0, 0, -5, 0, 0, -4, 0, 0, -3, 0, 0, -2, 0, 0, -1, 0, 0, -65536, 0, 0, -65535, 0, 0, -65534, 0, 0, -65533, 0, 0, -65532, 0, 0, -65531, 0, 0, -65530, 0, 0, -65529, 0, 0, -65528, 0, 0, -65527, 0, 0, -65526, 0, 0, -65525, 0, 0, -65524, 0, 0, -65523, 0, 0, -65522, 0, 0, -65521, 0, 0, -65520, 0, 0, 65531, 0, 0, 65532, 0, 0, 65533, 0, 0, 65534, 0, 0, 65535, 0, 0, 0, 1, 0, 1, 0, 0, 2, 3, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 131067, 0, 0, 131068, 0, 0, 131069, 0, 0, 131070, 0, 0, 131071, 3, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 65545, 0, 0, 65546, 0, 0, 65547, 0, 0, 65548, 0, 0, 65549, 0, 0, 65550, 0, 0, 65551, 0, 0, 65552, 0, 0, 196603, 0, 0, 196604, 0, 0, 196605, 0, 0, 196606, 0, 0, 196607, 0, 0, 131072, 1, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 0, 0, 131083, 0, 0, 131084, 0, 0, 131085, 0, 0, 131086, 0, 0, 131087, 0, 0, 131088, 0, 0, 262139, 0, 0, 262140, 0, 0, 262141, 0, 0, 262142, 0, 0, 262143, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 196618, 0, 0, 196619, 0, 0, 196620, 0, 0, 196621, 0, 0, 196622, 0, 0, 196623, 0, 0, 196624, 0, 0, 327675, 0, 0, 327676, 0, 0, 327677, 0, 0, 327678, 0, 0, 327679, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 1, 0, 262151, 0, 0, 262152, 0, 0, 262153, 0, 0, 262154, 0, 0, 262155, 0, 0, 262156, 0, 0, 262157, 0, 0, 262158, 0, 0, 262159, 0, 0, 262160, 0, 0, 393211, 0, 0, 393212, 0, 0, 393213, 0, 0, 393214, 0, 0, 393215, 0, 0, 327680, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 2, 0, 327688, 0, 0, 327689, 0, 0, 327690, 0, 0, 327691, 0, 0, 327692, 0, 0, 327693, 0, 0, 327694, 0, 0, 327695, 0, 0, 327696, 0, 0, 458747, 0, 0, 458748, 0, 0, 458749, 0, 0, 458750, 0, 0, 458751, 0, 0, 393216, 0, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 0, 0, 393226, 0, 0, 393227, 0, 0, 393228, 0, 0, 393229, 0, 0, 393230, 0, 0, 393231, 0, 0, 393232, 0, 0, 524283, 0, 0, 524284, 0, 0, 524285, 0, 0, 524286, 0, 0, 524287, 0, 0, 458752, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 0, 0, 458762, 0, 0, 458763, 0, 0, 458764, 0, 0, 458765, 0, 0, 458766, 0, 0, 458767, 0, 0, 458768, 0, 0, 589819, 0, 0, 589820, 0, 0, 589821, 0, 0, 589822, 0, 0, 589823, 0, 0, 524288, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 2, 0, 524292, 3, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0, 524303, 0, 0, 524304, 0, 0, 655355, 0, 0, 655356, 0, 0, 655357, 0, 0, 655358, 0, 0, 655359, 0, 0, 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0, 589839, 0, 0, 589840, 0, 0, 720891, 0, 0, 720892, 0, 0, 720893, 0, 0, 720894, 0, 0, 720895, 0, 0, 655360, 0, 0, 655361, 0, 0, 655362, 0, 0, 655363, 0, 0, 655364, 0, 0, 655365, 0, 0, 655366, 3, 0, 655367, 0, 0, 655368, 0, 0, 655369, 0, 0, 655370, 0, 0, 655371, 0, 0, 655372, 0, 0, 655373, 0, 0, 655374, 0, 0, 655375, 0, 0, 655376, 0, 0, 720901, 0, 0, 720902, 0, 0, 720903, 0, 0, 720904, 0, 0, 720905, 0, 0, 720906, 0, 0, 720907, 0, 0, 720908, 0, 0, 720909, 0, 0, 720910, 0, 0, 720911, 0, 0, 720912, 0, 0 )

[node name="Walls" type="TileMap" parent="."]
tile_set = ExtResource( 7 )
cell_size = Vector2( 32, 32 )
cell_tile_origin = 1
format = 1
tile_data = PoolIntArray( -524294, 0, 131076, -524293, 0, 2, -524292, 0, 2, -524291, 0, 2, -524290, 0, 2, -524289, 0, 2, -589824, 0, 2, -589823, 0, 2, -589822, 0, 2, -589821, 0, 2, -589820, 0, 2, -589819, 0, 2, -589818, 0, 2, -589817, 0, 2, -589816, 0, 2, -589815, 0, 2, -589814, 0, 2, -589813, 0, 2, -589812, 0, 2, -589811, 0, 2, -589810, 0, 2, -589809, 0, 2, -589808, 0, 131077, -458758, 0, 131072, -524272, 0, 131072, -393222, 0, 131072, -458736, 0, 131072, -327686, 0, 131072, -393200, 0, 131072, -262150, 0, 131072, -327678, 0, 65537, -327677, 0, 65538, -327676, 0, 65539, -327664, 0, 131072, -196614, 0, 131072, -262142, 0, 131073, -262141, 0, 131074, -262140, 0, 65540, -262139, 0, 65538, -262138, 0, 65538, -262137, 0, 65538, -262136, 0, 65538, -262135, 0, 65538, -262134, 0, 65538, -262133, 0, 65538, -262132, 0, 65538, -262131, 0, 65539, -262128, 0, 131072, -131078, 0, 131072, -196606, 0, 131073, -196605, 0, 131074, -196604, 0, 131074, -196603, 0, 131074, -196602, 0, 131074, -196601, 0, 131074, -196600, 0, 131074, -196599, 0, 131074, -196598, 0, 131074, -196597, 0, 131074, -196596, 0, 131074, -196595, 0, 131075, -196592, 0, 131072, -65542, 0, 131072, -131070, 0, 131073, -131069, 0, 131074, -131068, 0, 131074, -131067, 0, 131074, -131066, 0, 131074, -131065, 0, 131074, -131064, 0, 131074, -131063, 0, 131074, -131062, 0, 131074, -131061, 0, 131074, -131060, 0, 131074, -131059, 0, 65540, -131058, 0, 327688, -131057, 0, 2, -131056, 0, 327681, -6, 0, 131072, -65534, 0, 196609, -65533, 0, 196610, -65532, 0, 196610, -65531, 0, 196610, -65530, 0, 5, -65529, 0, 131074, -65528, 0, 131074, -65527, 0, 131074, -65526, 0, 131074, -65525, 0, 131074, -65524, 0, 131074, -65523, 0, 4, -65522, 0, 196611, -65520, 0, 131072, 65530, 0, 131072, 6, 0, 196609, 7, 0, 196610, 8, 0, 196610, 9, 0, 196610, 10, 0, 196610, 11, 0, 196610, 12, 0, 196610, 13, 0, 196611, 16, 0, 131072, 131066, 0, 131072, 65552, 0, 131072, 196602, 0, 131072, 131088, 0, 131072, 262138, 0, 131072, 196624, 0, 131072, 327674, 0, 131072, 262160, 0, 131072, 393210, 0, 131072, 327696, 0, 131072, 458746, 0, 131072, 393217, 0, 65537, 393218, 0, 65539, 393232, 0, 131072, 524282, 0, 131072, 458753, 0, 196609, 458754, 0, 393224, 458755, 0, 2, 458756, 0, 327689, 458757, 0, 65538, 458758, 0, 65539, 458768, 0, 131072, 589818, 0, 131072, 524292, 0, 196609, 524293, 0, 196610, 524294, 0, 393224, 524295, 0, 327689, 524296, 0, 65538, 524297, 0, 65539, 524304, 0, 131072, 655354, 0, 131072, 589831, 0, 196609, 589832, 0, 196610, 589833, 0, 196611, 589840, 0, 131072, 720890, 0, 131072, 655376, 0, 131072, 786426, 0, 196612, 786427, 0, 2, 786428, 0, 2, 786429, 0, 2, 786430, 0, 2, 786431, 0, 2, 720896, 0, 2, 720897, 0, 2, 720898, 0, 2, 720899, 0, 2, 720900, 0, 2, 720901, 0, 2, 720902, 0, 2, 720903, 0, 2, 720904, 0, 2, 720905, 0, 2, 720906, 0, 2, 720907, 0, 2, 720908, 0, 2, 720909, 0, 2, 720910, 0, 2, 720911, 0, 2, 720912, 0, 196613 )
script = ExtResource( 8 )

[node name="PlayerCore" parent="." instance=ExtResource( 2 )]
position = Vector2( 452.312, 141.848 )
script = ExtResource( 5 )

[node name="EnemySpawner" parent="." instance=ExtResource( 1 )]
position = Vector2( 95.0539, -198.352 )

[node name="EnemySpawner2" parent="." instance=ExtResource( 1 )]
position = Vector2( 48.4034, 295.349 )

[node name="PlayerTower" parent="." instance=ExtResource( 6 )]
position = Vector2( 137.673, 52.2842 )
scale = Vector2( 1, 1 )

[node name="PlayerTower2" parent="." instance=ExtResource( 6 )]
position = Vector2( -65.9363, 133.501 )
scale = Vector2( 1, 1 )

[node name="PlayerTower3" parent="." instance=ExtResource( 6 )]
position = Vector2( 420, 277.021 )
scale = Vector2( 1, 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
